fixed alignment

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 #player-text {
   position: fixed;
   right: 22%;
-  bottom: 46.5%;
+  bottom: 45.5%;
   font-family: "Pokemon";
   font-weight: bolder;
   font-size: 2.5vw;
